# mulle-semver

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  README.md  RELEASENOTES.md  mulle-semver
.github/workflows/: semgrep.yml
.mulle/etc/env/: environment-project.sh
.mulle/etc/project/: formula-info.sh  version-info.sh
.mulle/share/env/: environment-extension.sh  tool-extension  tool-plugin
.mulle/share/sde/: extension
cola/: description.md.bud  properties.plist  usage.md.bud
src/: mulle-semver-command.sh  mulle-semver-parse.sh  mulle-semver-qualify.sh  mulle-semver-search.sh  mulle-semver-sort.sh
test/: run-test
test/10-numeric/: run-test
test/15-alphanumeric/: run-test
test/20-comparison/: run-test
test/25-range/: run-test
test/30-caret/: run-test
test/35-tilde/: run-test
test/40-x-range/: run-test
